config-server-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 9999
      targetPort: 8888
  selector:
    app: config-server
