config-server-servicee.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server-service
spec:
  type: LoadBalancer
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
      nodePort: 30147
