ingress.yaml
apiVersion: networking.k8s.io/v1beta
kind: Ingress
metadata:
  name: config-server-ingress 
spec:
  rules:
  - host: config-server.com      
    http:
      paths:
      - path: /
        backend:
          serviceName: config-server-service 
          servicePort: 8888
